--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -24,124 +24,126 @@
                 <i class="card__text--vide far fa-heart"></i>
                 <i class="card__text--plein fas fa-heart"></i>
             </div>
-            <div class="menu menu--1">
-                <!-- titre de menu et trait       ???? -->
-                <h2>Entrées<br /><span></span></h2>
-                <a href="#">
-                <div class="menu__plat menu__plat--1">
-                    <div class="menu__plat--choix">
-                        <h3>Tartare de poulpe acidulé</h3>
-                        <p>Aux zests d'orange</p>
-                    </div>
-                    <p class="prix">25€</p>
-                    <div class="menu__plat--coche">
-                        <i class="test fas fa-check-circle"></i>
-                    </div>
-                    
-                </div>
-                </a>
-                <a href="#">
-                <div class="menu__plat menu__plat--2">
-                    <div class="menu__plat--choix">
-                        <h3>Velouté de légumes d'antan</h3>
-                        <p>Carotte, panais, topinambour</p>
-                    </div>
-                    <p class="prix">35€</p>
-                    <div class="menu__plat--coche">
-                        <i class="test fas fa-check-circle"></i>
-                    </div>
-                </div>
-                </a>
-                <a href="#">
-                <div class="menu__plat menu__plat--3">
-                    <div class="menu__plat--choix">
-                        <h3>Soupe à l'oignon</h3>
-                        <p>Revisitée</p>
-                    </div>
-                    <p class="prix">20€</p>
-                    <div class="menu__plat--coche">
-                        <i class="test fas fa-check-circle"></i>
-                    </div>
-                </div>
-                </a>
-            </div>
-            <div class="menu menu--2">
-                <h2>Plats<br /><span></span></h2>
-                <a href="#">
-                <div class="menu__plat menu__plat--1">
-                    <div class="menu__plat--choix">
-                        <h3>Coquilles Saint-Jacques</h3>
-                        <p>Accompagnées d'une purée de panais</p>
-                    </div>
-                    <p class="prix">40€</p>
-                    <div class="menu__plat--coche">
-                        <i class="test fas fa-check-circle"></i>
-                    </div>
-                </div>
-                </a>
-                <a href="#">
-                <div class="menu__plat menu__plat--2">
-                    <div class="menu__plat--choix">
-                        <h3>Magret de canard</h3>
-                        <p>Et parmentier de pommes de terres</p>
-                    </div>
-                    <p class="prix">35€</p>
-                    <div class="menu__plat--coche">
-                        <i class="test fas fa-check-circle"></i>
-                    </div>
-                </div>
-                </a>
-                <a href="#">
-                <div class="menu__plat menu__plat--3">
-                    <div class="menu__plat--choix">
-                        <h3>Pigeonneau d'Illes-et-Vilaine</h3>
-                        <p>Sur son lit de gnocchis aux légumes</p>
-                    </div>
-                    <p class="prix">44€</p>
-                    <div class="menu__plat--coche">
-                        <i class="test fas fa-check-circle"></i>
-                    </div>
-                </div>
-                </a>
-            </div>
-            <div class="menu menu--3">
-                <h2>Desserts<br /><span></span></h2>
-                <a href="#">
-                <div class="menu__plat menu__plat--1">
-                    <div class="menu__plat--choix">
-                        <h3>Pétales de violettes glacés</h3>
-                        <p>Et purée de noisettes</p>
-                    </div>
-                        <p class="prix">18€</p>
+            <div class="menuu">
+                <div class="menu menu--1">
+                    <!-- titre de menu et trait       ???? -->
+                    <h2>Entrées<br /><span></span></h2>
+                    <a href="#">
+                    <div class="menu__plat menu__plat--1">
+                        <div class="menu__plat--choix">
+                            <h3>Tartare de poulpe acidulé</h3>
+                            <p>Aux zests d'orange</p>
+                        </div>
+                        <p class="prix">25€</p>
                         <div class="menu__plat--coche">
                             <i class="test fas fa-check-circle"></i>
                         </div>
+                        
+                    </div>
+                    </a>
+                    <a href="#">
+                    <div class="menu__plat menu__plat--2">
+                        <div class="menu__plat--choix">
+                            <h3>Velouté de légumes d'antan</h3>
+                            <p>Carotte, panais, topinambour</p>
+                        </div>
+                        <p class="prix">35€</p>
+                        <div class="menu__plat--coche">
+                            <i class="test fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    </a>
+                    <a href="#">
+                    <div class="menu__plat menu__plat--3">
+                        <div class="menu__plat--choix">
+                            <h3>Soupe à l'oignon</h3>
+                            <p>Revisitée</p>
+                        </div>
+                        <p class="prix">20€</p>
+                        <div class="menu__plat--coche">
+                            <i class="test fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    </a>
                 </div>
-                </a>
-                <a href="#">
-                <div class="menu__plat menu__plat--2">
-                    <div class="menu__plat--choix">
-                        <h3>Fondant au chocolat</h3>
-                        <p>Revisité</p>
+                <div class="menu menu--2">
+                    <h2>Plats<br /><span></span></h2>
+                    <a href="#">
+                    <div class="menu__plat menu__plat--1">
+                        <div class="menu__plat--choix">
+                            <h3>Coquilles Saint-Jacques</h3>
+                            <p>Accompagnées d'une purée de panais</p>
+                        </div>
+                        <p class="prix">40€</p>
+                        <div class="menu__plat--coche">
+                            <i class="test fas fa-check-circle"></i>
+                        </div>
                     </div>
-                    <p class="prix">22€</p>
-                    <div class="menu__plat--coche">
-                        <i class="test fas fa-check-circle"></i>
+                    </a>
+                    <a href="#">
+                    <div class="menu__plat menu__plat--2">
+                        <div class="menu__plat--choix">
+                            <h3>Magret de canard</h3>
+                            <p>Et parmentier de pommes de terres</p>
+                        </div>
+                        <p class="prix">35€</p>
+                        <div class="menu__plat--coche">
+                            <i class="test fas fa-check-circle"></i>
+                        </div>
                     </div>
+                    </a>
+                    <a href="#">
+                    <div class="menu__plat menu__plat--3">
+                        <div class="menu__plat--choix">
+                            <h3>Pigeonneau d'Illes-et-Vilaine</h3>
+                            <p>Sur son lit de gnocchis aux légumes</p>
+                        </div>
+                        <p class="prix">44€</p>
+                        <div class="menu__plat--coche">
+                            <i class="test fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    </a>
                 </div>
-                </a>
-                <a href="#">
-                <div class="menu__plat menu__plat--3">
-                    <div class="menu__plat--choix">
-                        <h3>Millefeuille croustillant</h3>
-                        <p>myrtilles et pâtes d'amande</p>
+                <div class="menu menu--3">
+                    <h2>Desserts<br /><span></span></h2>
+                    <a href="#">
+                    <div class="menu__plat menu__plat--1">
+                        <div class="menu__plat--choix">
+                            <h3>Pétales de violettes glacés</h3>
+                            <p>Et purée de noisettes</p>
+                        </div>
+                            <p class="prix">18€</p>
+                            <div class="menu__plat--coche">
+                                <i class="test fas fa-check-circle"></i>
+                            </div>
                     </div>
-                    <p class="prix">23€</p>
-                    <div class="menu__plat--coche">
-                        <i class="test fas fa-check-circle"></i>
+                    </a>
+                    <a href="#">
+                    <div class="menu__plat menu__plat--2">
+                        <div class="menu__plat--choix">
+                            <h3>Fondant au chocolat</h3>
+                            <p>Revisité</p>
+                        </div>
+                        <p class="prix">22€</p>
+                        <div class="menu__plat--coche">
+                            <i class="test fas fa-check-circle"></i>
+                        </div>
                     </div>
+                    </a>
+                    <a href="#">
+                    <div class="menu__plat menu__plat--3">
+                        <div class="menu__plat--choix">
+                            <h3>Millefeuille croustillant</h3>
+                            <p>myrtilles et pâtes d'amande</p>
+                        </div>
+                        <p class="prix">23€</p>
+                        <div class="menu__plat--coche">
+                            <i class="test fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    </a>
                 </div>
-                </a>
             </div>
             <div class="commander"><a href="#" class="header__slogan--explore">Commander</a></div>
         </div>
