--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
             </div>
             <nav class="nav">
                 <h2>Fonctionnement</h2>
-                <div class="nav__lien">
+                <div class="nav__lien nav__lien--1">
                     <p>1</p>
                     <i class="fas fa-mobile-alt"></i>
                     <a href="#">Choisissez un restaurant</a>
                 </div>
-                <div class="nav__lien">
+                <div class="nav__lien nav__lien--2">
                     <p>2</p>
                     <i class="fas fa-list-ul"></i>
                     <a href="#">Composez votre menu</a>
                 </div>
-                <div class="nav__lien">
+                <div class="nav__lien nav__lien--3">
                     <p>3</p>
                     <i class="fas fa-store"></i>
                     <a href="#">Dégustez au restaurant</a>
@@ -69,7 +69,7 @@
         <!-- SECTION -->
         <section id="restaurants">
             <h2>Restaurants</h2>
-            <div class="card">
+            <div class="card card--1">
                 <a href="la_palette_du_gout.html">
                     <img src="assets/img/paletteDuGout.jpg" alt="photo de plat, la palette du goût">
                     <p class="card__nouveau">Nouveau</p>
@@ -83,7 +83,7 @@
                         <i class="card__text--plein fas fa-heart"></i>
                     </div>
             </div>
-            <div class="card">
+            <div class="card card--2">
                 <a href="la_note_enchante.html">
                     <img src="assets/img/noteEnchantee.jpg" alt="photo de plat, la note enchantée">
                     <p class="card__nouveau">Nouveau</p>
@@ -99,7 +99,7 @@
                         <i class="card__text--plein fas fa-heart"></i>
                     </div>
             </div>
-            <div class="card">
+            <div class="card card--3">
                 <a href="a_la_francaise.html">
                     <img src="assets/img/laFrancaise.jpg" alt="photo de plat, à la française">
                     <div class="card__text">
@@ -113,7 +113,7 @@
                         <i class="card__text--plein fas fa-heart"></i>
                     </div>
             </div>
-            <div class="card">
+            <div class="card card--4">
                 <a href="le_delice_des_sens.html">
                     <img src="assets/img/deliceDesSens.jpg" alt="photo de plat, le délice des sens">
                     <div class="card__text">
