--- a/la_note_enchante.html
+++ b/la_note_enchante.html
@@ -25,136 +25,138 @@
                 <i class="card__text--vide far fa-heart"></i>
                 <i class="card__text--plein fas fa-heart"></i>
             </div>
-            <div class="menu menu--1">
-                <h2>Entrées<br /><span></span></h2>
-                <a href="#">
-                <div class="menu__plat menu__plat--1">
-                    <div class="menu__plat--choix">
-                        <h3>Ravioles de foie gras</h3>
-                        <p>Accompagnés de leur crème à la truffe</p>
-                    </div>
-                    <p class="prix">25€</p>
-                    <div class="menu__plat--coche">
-                        <i class="test fas fa-check-circle"></i>
-                    </div>
-                </div>
-                </a>
-                <a href="#">
-                <div class="menu__plat menu__plat--2">
-                    <div class="menu__plat--choix">
-                        <h3>Caviar osciètre</h3>
-                        <p>Sur blini à la farine de blé noir</p>
-                    </div>
-                    <p class="prix">35€</p>
-                    <div class="menu__plat--coche">
-                        <i class="test fas fa-check-circle"></i>
-                    </div>
-                </div>
-                </a>
-                <a href="#">
-                <div class="menu__plat menu__plat--3">
-                    <div class="menu__plat--choix">
-                        <h3>Homard et espuma de potiron</h3>
-                        <p>Mariné aux zestes d'orange</p>
-                    </div>
-                    <p class="prix">20€</p>
-                    <div class="menu__plat--coche">
-                        <i class="test fas fa-check-circle"></i>
-                    </div>
-                </div>
-                </a>
-                <a href="#">
-                    <div class="menu__plat menu__plat--4">
-                        <div class="menu__plat--choix">
-                            <h3>Foie gras de canard cuit entier</h3>
-                            <p>Confiture de figue et pain toasté</p>
+            <div class="menuu">
+                <div class="menu menu--1">
+                    <h2>Entrées<br /><span></span></h2>
+                    <a href="#">
+                        <div class="menu__plat menu__plat--1">
+                            <div class="menu__plat--choix">
+                                <h3>Ravioles de foie gras</h3>
+                                <p>Accompagnés de leur crème à la truffe</p>
+                            </div>
+                            <p class="prix">25€</p>
+                            <div class="menu__plat--coche">
+                                <i class="test fas fa-check-circle"></i>
+                            </div>
                         </div>
-                        <p class="prix">35€</p>
+                    </a>
+                    <a href="#">
+                        <div class="menu__plat menu__plat--2">
+                            <div class="menu__plat--choix">
+                                <h3>Caviar osciètre</h3>
+                                <p>Sur blini à la farine de blé noir</p>
+                            </div>
+                            <p class="prix">35€</p>
+                            <div class="menu__plat--coche">
+                                <i class="test fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="menu__plat menu__plat--3">
+                            <div class="menu__plat--choix">
+                                <h3>Homard et espuma de potiron</h3>
+                                <p>Mariné aux zestes d'orange</p>
+                            </div>
+                            <p class="prix">20€</p>
+                            <div class="menu__plat--coche">
+                                <i class="test fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="menu__plat menu__plat--4">
+                            <div class="menu__plat--choix">
+                                <h3>Foie gras de canard cuit entier</h3>
+                                <p>Confiture de figue et pain toasté</p>
+                            </div>
+                            <p class="prix">35€</p>
+                            <div class="menu__plat--coche">
+                                <i class="test fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="menu menu--2">
+                    <h2>Plats<br /><span></span></h2>
+                    <a href="#">
+                        <div class="menu__plat menu__plat--1">
+                            <div class="menu__plat--choix">
+                                <h3>Noix de coquilles Saint-Jacques</h3>
+                                <p>Sur lit de purée de céleri-rave</p>
+                            </div>
+                            <p class="prix">40€</p>
+                            <div class="menu__plat--coche">
+                                <i class="test fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="menu__plat menu__plat--2">
+                            <div class="menu__plat--choix">
+                                <h3>Langoustine poêlée</h3>
+                                <p>Purée de patate douce</p>
+                            </div>
+                            <p class="prix">35€</p>
+                            <div class="menu__plat--coche">
+                                <i class="test fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="menu__plat menu__plat--3">
+                            <div class="menu__plat--choix">
+                                <h3>Mijoté de queue de boeuf</h3>
+                                <p>Et riz sauvage aux zestes de citron</p>
+                            </div>
+                            <p class="prix">44€</p>
+                            <div class="menu__plat--coche">
+                                <i class="test fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="menu menu--3">
+                    <h2>Desserts<br /><span></span></h2>
+                    <a href="#">
+                        <div class="menu__plat menu__plat--1">
+                            <div class="menu__plat--choix">
+                                <h3>Macaron noisette et chocolat</h3>
+                                <p>Glace au caramel brun et sel de Guérande</p>
+                            </div>
+                            <p class="prix">18€</p>
+                            <div class="menu__plat--coche">
+                                <i class="test fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="menu__plat menu__plat--2">
+                            <div class="menu__plat--choix">
+                                <h3>Baba au rhum revisité</h3>
+                                <p>Avec son coulis de citron</p>
+                        </div>
+                        <p class="prix">22€</p>
                         <div class="menu__plat--coche">
-                        <i class="test fas fa-check-circle"></i>
-                    </div>
+                            <i class="test fas fa-check-circle"></i>
+                        </div>
                     </div>
                     </a>
+                    <a href="#">
+                        <div class="menu__plat menu__plat--3">
+                            <div class="menu__plat--choix">
+                                <h3>Tarte au citron meringuée</h3>
+                                <p>Déstructurée</p>
+                            </div>
+                            <p class="prix">23€</p>
+                            <div class="menu__plat--coche">
+                                <i class="test fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </a>
+                </div>
             </div>
-            <div class="menu menu--2">
-                <h2>Plats<br /><span></span></h2>
-                <a href="#">
-                <div class="menu__plat menu__plat--1">
-                    <div class="menu__plat--choix">
-                        <h3>Noix de coquilles Saint-Jacques</h3>
-                        <p>Sur lit de purée de céleri-rave</p>
-                    </div>
-                    <p class="prix">40€</p>
-                    <div class="menu__plat--coche">
-                        <i class="test fas fa-check-circle"></i>
-                    </div>
-                </div>
-                </a>
-                <a href="#">
-                <div class="menu__plat menu__plat--2">
-                    <div class="menu__plat--choix">
-                        <h3>Langoustine poêlée</h3>
-                        <p>Purée de patate douce</p>
-                    </div>
-                    <p class="prix">35€</p>
-                    <div class="menu__plat--coche">
-                        <i class="test fas fa-check-circle"></i>
-                    </div>
-                </div>
-                </a>
-                <a href="#">
-                <div class="menu__plat menu__plat--3">
-                    <div class="menu__plat--choix">
-                        <h3>Mijoté de queue de boeuf</h3>
-                        <p>Et riz sauvage aux zestes de citron</p>
-                    </div>
-                    <p class="prix">44€</p>
-                    <div class="menu__plat--coche">
-                        <i class="test fas fa-check-circle"></i>
-                    </div>
-                </div>
-                </a>
-            </div>
-            <div class="menu menu--3">
-                <h2>Desserts<br /><span></span></h2>
-                <a href="#">
-                <div class="menu__plat menu__plat--1">
-                    <div class="menu__plat--choix">
-                        <h3>Macaron noisette et chocolat</h3>
-                        <p>Glace au caramel brun et sel de Guérande</p>
-                    </div>
-                        <p class="prix">18€</p>
-                        <div class="menu__plat--coche">
-                        <i class="test fas fa-check-circle"></i>
-                    </div>
-                </div>
-                </a>
-                <a href="#">
-                <div class="menu__plat menu__plat--2">
-                    <div class="menu__plat--choix">
-                        <h3>Baba au rhum revisité</h3>
-                        <p>Avec son coulis de citron</p>
-                    </div>
-                    <p class="prix">22€</p>
-                    <div class="menu__plat--coche">
-                        <i class="test fas fa-check-circle"></i>
-                    </div>
-                </div>
-                </a>
-                <a href="#">
-                <div class="menu__plat menu__plat--3">
-                    <div class="menu__plat--choix">
-                        <h3>Tarte au citron meringuée</h3>
-                        <p>Déstructurée</p>
-                    </div>
-                    <p class="prix">23€</p>
-                    <div class="menu__plat--coche">
-                        <i class="test fas fa-check-circle"></i>
-                    </div>
-                </div>
-                </a>
-            </div>
-            <div class="commander"><a href="#" class="header__slogan--explore">Commander</a></div>
+        <div class="commander"><a href="#" class="header__slogan--explore">Commander</a></div>
         </div>
     </section>
 
