--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -24,122 +24,124 @@
                 <i class="card__text--vide far fa-heart"></i>
                 <i class="card__text--plein fas fa-heart"></i>
             </div>
-            <div class="menu menu--1">
-                <h2>Entrées<br /><span></span></h2>
-                <a href="#">
-                <div class="menu__plat menu__plat--1">
-                    <div class="menu__plat--choix">
-                        <h3>Tartare de thon</h3>
-                        <p>Assaisonné au yuzu</p>
-                    </div>
-                    <p class="prix">25€</p>
-                    <div class="menu__plat--coche">
-                        <i class="test fas fa-check-circle"></i>
-                    </div>
-                </div>
-                </a>
-                <a href="#">
-                <div class="menu__plat menu__plat--2">
-                    <div class="menu__plat--choix">
-                        <h3>Bouchée de homard croustillant </h3>
-                        <p>Et sa farandole de petits légumes</p>
-                    </div>
-                    <p class="prix">35€</p>
-                    <div class="menu__plat--coche">
-                        <i class="test fas fa-check-circle"></i>
-                    </div>
-                </div>
-                </a>
-                <a href="#">
-                <div class="menu__plat menu__plat--3">
-                    <div class="menu__plat--choix">
-                        <h3>Velouté de cèpes </h3>
-                        <p>Aux truffes</p>
-                    </div>
-                    <p class="prix">20€</p>
-                    <div class="menu__plat--coche">
-                        <i class="test fas fa-check-circle"></i>
-                    </div>
-                </div>
-                </a>
-            </div>
-            <div class="menu menu--2">
-                <h2>Plats<br /><span></span></h2>
-                <a href="#">
-                <div class="menu__plat menu__plat--1">
-                    <div class="menu__plat--choix">
-                        <h3>Poulet rôti aux herbes de Provence </h3>
-                        <p>Et sa crème de truffe</p>
-                    </div>
-                    <p class="prix">40€</p>
-                    <div class="menu__plat--coche">
-                        <i class="test fas fa-check-circle"></i>
-                    </div>
-                </div>
-                </a>
-                <a href="#">
-                <div class="menu__plat menu__plat--2">
-                    <div class="menu__plat--choix">
-                        <h3>Langouste rôtie</h3>
-                        <p>Et ses légumes de saison</p>
-                    </div>
-                    <p class="prix">35€</p>
-                    <div class="menu__plat--coche">
-                        <i class="test fas fa-check-circle"></i>
-                    </div>
-                </div>
-                </a>
-                <a href="#">
-                <div class="menu__plat menu__plat--3">
-                    <div class="menu__plat--choix">
-                        <h3>Côte de boeuf Angus</h3>
-                        <p>Et sa purée de panais</p>
-                    </div>
-                    <p class="prix">44€</p>
-                    <div class="menu__plat--coche">
-                        <i class="test fas fa-check-circle"></i>
-                    </div>
-                </div>
-                </a>
-            </div>
-            <div class="menu menu--3">
-                <h2>Desserts<br /><span></span></h2>
-                <a href="#">
-                <div class="menu__plat menu__plat--1">
-                    <div class="menu__plat--choix">
-                        <h3>Farandole de desserts</h3>
-                        <p>Du chef</p>
-                    </div>
-                        <p class="prix">18€</p>
+            <div class="menuu">
+                <div class="menu menu--1">
+                    <h2>Entrées<br /><span></span></h2>
+                    <a href="#">
+                    <div class="menu__plat menu__plat--1">
+                        <div class="menu__plat--choix">
+                            <h3>Tartare de thon</h3>
+                            <p>Assaisonné au yuzu</p>
+                        </div>
+                        <p class="prix">25€</p>
                         <div class="menu__plat--coche">
-                        <i class="test fas fa-check-circle"></i>
+                            <i class="test fas fa-check-circle"></i>
+                        </div>
                     </div>
+                    </a>
+                    <a href="#">
+                    <div class="menu__plat menu__plat--2">
+                        <div class="menu__plat--choix">
+                            <h3>Bouchée de homard croustillant </h3>
+                            <p>Et sa farandole de petits légumes</p>
+                        </div>
+                        <p class="prix">35€</p>
+                        <div class="menu__plat--coche">
+                            <i class="test fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    </a>
+                    <a href="#">
+                    <div class="menu__plat menu__plat--3">
+                        <div class="menu__plat--choix">
+                            <h3>Velouté de cèpes </h3>
+                            <p>Aux truffes</p>
+                        </div>
+                        <p class="prix">20€</p>
+                        <div class="menu__plat--coche">
+                            <i class="test fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    </a>
                 </div>
-                </a>
-                <a href="#">
-                <div class="menu__plat menu__plat--2">
-                    <div class="menu__plat--choix">
-                        <h3>Crème brulée</h3>
-                        <p>Revisitée</p>
+                <div class="menu menu--2">
+                    <h2>Plats<br /><span></span></h2>
+                    <a href="#">
+                    <div class="menu__plat menu__plat--1">
+                        <div class="menu__plat--choix">
+                            <h3>Poulet rôti aux herbes de Provence </h3>
+                            <p>Et sa crème de truffe</p>
+                        </div>
+                        <p class="prix">40€</p>
+                        <div class="menu__plat--coche">
+                            <i class="test fas fa-check-circle"></i>
+                        </div>
                     </div>
-                    <p class="prix">22€</p>
-                    <div class="menu__plat--coche">
-                        <i class="test fas fa-check-circle"></i>
+                    </a>
+                    <a href="#">
+                    <div class="menu__plat menu__plat--2">
+                        <div class="menu__plat--choix">
+                            <h3>Langouste rôtie</h3>
+                            <p>Et ses légumes de saison</p>
+                        </div>
+                        <p class="prix">35€</p>
+                        <div class="menu__plat--coche">
+                            <i class="test fas fa-check-circle"></i>
+                        </div>
                     </div>
+                    </a>
+                    <a href="#">
+                    <div class="menu__plat menu__plat--3">
+                        <div class="menu__plat--choix">
+                            <h3>Côte de boeuf Angus</h3>
+                            <p>Et sa purée de panais</p>
+                        </div>
+                        <p class="prix">44€</p>
+                        <div class="menu__plat--coche">
+                            <i class="test fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    </a>
                 </div>
-                </a>
-                <a href="#">
-                <div class="menu__plat menu__plat--3">
-                    <div class="menu__plat--choix">
-                        <h3>Tiramisu </h3>
-                        <p>À la noisette</p>
+                <div class="menu menu--3">
+                    <h2>Desserts<br /><span></span></h2>
+                    <a href="#">
+                    <div class="menu__plat menu__plat--1">
+                        <div class="menu__plat--choix">
+                            <h3>Farandole de desserts</h3>
+                            <p>Du chef</p>
+                        </div>
+                            <p class="prix">18€</p>
+                            <div class="menu__plat--coche">
+                            <i class="test fas fa-check-circle"></i>
+                        </div>
                     </div>
-                    <p class="prix">23€</p>
-                    <div class="menu__plat--coche">
-                        <i class="test fas fa-check-circle"></i>
+                    </a>
+                    <a href="#">
+                    <div class="menu__plat menu__plat--2">
+                        <div class="menu__plat--choix">
+                            <h3>Crème brulée</h3>
+                            <p>Revisitée</p>
+                        </div>
+                        <p class="prix">22€</p>
+                        <div class="menu__plat--coche">
+                            <i class="test fas fa-check-circle"></i>
+                        </div>
                     </div>
+                    </a>
+                    <a href="#">
+                    <div class="menu__plat menu__plat--3">
+                        <div class="menu__plat--choix">
+                            <h3>Tiramisu </h3>
+                            <p>À la noisette</p>
+                        </div>
+                        <p class="prix">23€</p>
+                        <div class="menu__plat--coche">
+                            <i class="test fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    </a>
                 </div>
-                </a>
             </div>
             <div class="commander"><a href="#" class="header__slogan--explore">Commander</a></div>
         </div>
